# Serial-Chat

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  SerialChat.pro
.github/workflows/: build.yml
_codeql_build_dir/SerialChat_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/SerialChat_autogen/M4YTXQ7V2H/: moc_Message.cpp.d  moc_SerialPort.cpp.d  moc_Session.cpp.d
_codeql_build_dir/SerialChat_autogen/Z3L7HTGYLD/: moc_MainWindow.cpp.d  moc_MessageBubbleWidget.cpp.d
docs/: ci-cd-setup.md  development.md  features.md  readme.md  version-control.md
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  messagebubblewidget.cpp  messagebubblewidget.h
src/core/: ChatGroup.cpp  ChatGroup.h  DataPersistence.cpp  DataPersistence.h  MessageManager.cpp  MessageManager.h  SerialPortManager.cpp  SerialPortManager.h  SerialPortUser.cpp  SerialPortUser.h
src/models/: ChatGroupInfo.cpp  ChatGroupInfo.h  Message.cpp  Message.h  SerialPort.cpp  SerialPort.h  SerialPortInfo.cpp  SerialPortInfo.h  Session.cpp  Session.h  message.cpp  message.h  serialport.cpp  serialport.h  session.cpp  session.h
src/ui/: ChatBubble.cpp  ChatBubble.h  ChatGroupDialog.cpp  ChatGroupDialog.h  ChatWidget.cpp  ChatWidget.h  FriendListItem.cpp  FriendListItem.h  FriendListWidget.cpp  FriendListWidget.h  MainWindow.cpp  MainWindow.h  SerialPortRemarkDialog.cpp  SerialPortRemarkDialog.h  SerialPortSettingsDialog.cpp  SerialPortSettingsDialog.h
src/utils/: HexUtils.cpp  HexUtils.h  TimeUtils.cpp  TimeUtils.h
src/views/: MainWindow.cpp  MainWindow.h  MessageBubbleWidget.cpp  MessageBubbleWidget.h
tests/: TestChatGroup.cpp  TestHexUtils.cpp  TestMessage.cpp  TestMessageManager.cpp  TestSerialPortInfo.cpp  main_test.cpp
